# gameengine3

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini  run.bat
assets/shaders/: lit_shader.fs  lit_shader.vs
docs/: notes.md
src/: main.cpp  orbitcamera.cpp  orbitcamera.h
